--- a/css/PITCHME.css
+++ b/css/PITCHME.css
@@ -6,8 +6,5 @@
 }
 .reveal .slides {
     text-align: left;
-}
-.reveal .slides section>* {
-    margin-left: 0;
-    margin-right: 0;
+    font-size: 0.5em;
 }
